# serialization2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  serialization2.dia
examples/: CMakeLists.txt  addressbook.proto  example.cpp  example_json.cpp  example_protobuf.cpp  profile_json.cpp
include/serialization/: serialization.h
include/serialization/detail/: binary_iarchive.h  binary_oarchive.h  byte_order.h  config.h  endian.h  json_iarchive.h  json_oarchive.h  meta.h  serialization_error.h  serialization_helper.h  serialization_unpack.h  xml_iarchive.h  xml_oarchive.h
include/serialization/detail/rapidxml/: rapidxml_print.hpp
test/: CMakeLists.txt  jsontest.cpp  unittest.cpp  xmltest.cpp
